IE9 fixes
Prevent blog article box text from overflowing and fix form input
heights.

--- a/sources/stylesheets/content/_blog-article.scss
+++ b/sources/stylesheets/content/_blog-article.scss
@@ -130,6 +130,8 @@
 }
 
 .article-placeholder {
+  max-width: 100%;
+  box-sizing: border-box;
   padding: 20px;
 }
 
