--- a/sources/stylesheets/content/_form.scss
+++ b/sources/stylesheets/content/_form.scss
@@ -27,10 +27,11 @@
 .form_field_textfield,
 .form_field_textarea {
   width: 30%;
-  padding: 2px 7px 1px;
+  height: 33px;
+  padding: 4px 7px 2px;
   font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   font-size: 18px;
-  line-height: 1.67;
+  line-height: 1.5;
   color: rgba($color-black, .87);
   background-color: rgba($color-white, 1);
   border: 0;
